--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_single_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_single_post.xml
@@ -89,9 +89,21 @@
             android:gravity="top|start"
             android:padding="@dimen/text_padding"
             android:text="User"
-            android:textSize="17dp"
+            android:textSize="20dp"
             android:textStyle="bold"
+            android:textColor="#FF03DAC5"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvLocationType" />
+
+        <TextView
+            android:id="@+id/tvDatePosted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:gravity="top|start"
+            android:padding="@dimen/text_padding"
+            android:text="Timestamp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvLocationType" />
 
         <LinearLayout
