--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_single_post_description.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_single_post_description.xml
@@ -39,6 +39,8 @@
             app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
         <LinearLayout
+
+            android:id="@+id/linearLayout9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -47,47 +49,89 @@
             app:layout_constraintTop_toBottomOf="@+id/title">
 
             <ImageView
-                android:clickable="true"
                 android:id="@+id/rateStar1"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:clickable="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_round_star_outline_24" />
 
             <ImageView
-                android:clickable="true"
                 android:id="@+id/rateStar2"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:clickable="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_round_star_outline_24" />
 
             <ImageView
-                android:clickable="true"
                 android:id="@+id/rateStar3"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:clickable="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_round_star_outline_24" />
 
             <ImageView
-                android:clickable="true"
                 android:id="@+id/rateStar4"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:clickable="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_round_star_outline_24" />
 
             <ImageView
-                android:clickable="true"
                 android:id="@+id/rateStar5"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:clickable="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_round_star_outline_24" />
 
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvObrisi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sigurno? Brisanje je trajno."
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnObrisi" />
+
+        <Button
+            android:id="@+id/btnObrisi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="19dp"
+            android:text="Obrisi objavu"
+            android:visibility="gone"
+            android:backgroundTint="#8B0000"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout9" />
+
+        <Button
+            android:id="@+id/btnObrisiN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FFFFFF"
+            android:textColor="@color/cardview_dark_background"
+            android:layout_marginStart="20dp"
+            android:text="Odustani"
+            android:visibility="gone"
+            app:layout_constraintStart_toEndOf="@+id/btnObrisiY"
+            app:layout_constraintTop_toBottomOf="@+id/tvObrisi" />
+
+        <Button
+            android:id="@+id/btnObrisiY"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Potvrdi"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvObrisi" />
+
         <!--<LinearLayout
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
