--- a/Client/BrzoDoLokacije/app/src/main/res/values/colors.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="unfollow">#c4c4c4</color>
+    <color name="unfollow_transparent">#66c4c4c4</color>
     <color name="dark_blue_transparent">#DE093A4C</color>
     <color name="button_main">#183e4b</color>
     <color name="grey">#747474</color>
