--- a/Client/BrzoDoLokacije/app/src/main/res/layout/chat_preview.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/chat_preview.xml
@@ -8,6 +8,8 @@
         android:layout_width="5dp"
         android:id="@+id/readIndicator"
         android:layout_height="5dp"
+        android:background="@drawable/rounded_picture_background"
+        android:backgroundTint="@null"
         android:layout_gravity="center_vertical"/>
     <ImageView
         android:id="@+id/ivUserImage"
