--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_add_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_add_post.xml
@@ -102,12 +102,12 @@
     <EditText
         android:id="@+id/etActivityAddPostDescription"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="Reykjavik, Iceland"
-        android:inputType="textEmailAddress"
+        android:maxLines="100"
+        android:minHeight="50dp"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/llTags"
         app:layout_constraintEnd_toEndOf="parent"
