Sklonjeno dugme 'prati' u fragmentima za pratioce, prepravljena orijentacija liste korisnika na istim fragmentima #83

--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_followers.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_followers.xml
@@ -31,7 +31,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvFragmentShowFollowers"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"/>
 
     </LinearLayout>
 </FrameLayout>
