--- a/Client/BrzoDoLokacije/app/src/main/res/layout/follower_item.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/follower_item.xml
@@ -51,7 +51,7 @@
             android:text="Petar Petrovic"
             android:textSize="17sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/materialButton"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/cvFragmentHomePageProfile"
             app:layout_constraintTop_toTopOf="parent">
@@ -63,27 +63,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Petar Petrovic"
+            android:layout_marginStart="24dp"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/materialButton"
-            app:layout_constraintHorizontal_bias="0.597"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/cvFragmentHomePageProfile"
             app:layout_constraintTop_toBottomOf="@+id/tvFollowerItemName"
             app:layout_constraintVertical_bias="0.0" />
-
-        <ImageButton
-
-            android:id="@+id/materialButton"
-            android:layout_width="101dp"
-            android:layout_height="39dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/rounded_transparent_button"
-            android:foreground="@drawable/button_follow"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.508"
-            tools:ignore="TouchTargetSizeCheck" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
