--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_following.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_following.xml
@@ -31,7 +31,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvFragmentShowFollowing"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"/>
     </LinearLayout>
 
 </FrameLayout>
