--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_user_profile.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_user_profile.xml
@@ -141,15 +141,15 @@
                 android:layout_marginEnd="35dp"
                 android:elevation="1dp"
                 android:numColumns="3"
-                app:layout_constraintBottom_toBottomOf="@+id/tvFragmentProfileInfoContainer"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/tvFragmentProfileInfoContainer"
+                app:layout_constraintTop_toBottomOf="@+id/cvFragmentHomePageProfile"
                 app:layout_constraintVertical_bias="0.88">
 
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:gravity="center_horizontal"
                     android:layout_column="1"
                     >
 
@@ -267,7 +267,9 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
-                    android:layout_gravity="center">
+                    android:layout_gravity="center"
+                    android:id="@+id/clActivityUserProfileFollow_Chat_Row"
+                    android:visibility="gone">
 
                     <Button
 
