Ucitava se slika u gornjem desnom uglu pocetne strane i na klik se prelazi na profil korisnika #83

--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_home_page.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_home_page.xml
@@ -48,6 +48,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:scaleType="centerCrop"
+            android:clickable="true"
             android:src="@drawable/ic_baseline_person_24"
             tools:ignore="ContentDescription"
             tools:layout_editor_absoluteX="9dp"
