--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_user_profile.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_user_profile.xml
@@ -92,7 +92,7 @@
                 <Button
                     android:layout_weight="1"
                     android:id="@+id/btnActivityUserProfileShowPosts"
-                    android:layout_width="120dp"
+                    android:layout_width="125dp"
                     android:layout_height="wrap_content"
                     android:backgroundTint="#FFFFFF"
                     android:stateListAnimator="@null"
@@ -103,21 +103,21 @@
                 <Button
                     android:layout_weight="1"
                     android:id="@+id/btnFragmentUserProfileShowData"
-                    android:layout_width="110dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:backgroundTint="#FFFFFF"
                     android:stateListAnimator="@null"
-                    android:text="Nalog"
+                    android:text="Mapa"
                     android:textColor="@color/cardview_dark_background"
                     />
 
                 <Button
                     android:id="@+id/btnFragmentUserProfileShowRecensions"
-                    android:layout_width="120dp"
+                    android:layout_width="125dp"
                     android:layout_height="wrap_content"
                     android:backgroundTint="#FFFFFF"
                     android:stateListAnimator="@null"
-                    android:text="Recenzije"
+                    android:text="Statistika"
                     android:textColor="@color/cardview_dark_background"
                     />
             </LinearLayout>
