Promenjena dugmad na stranici za prikaz objava. Promenjena boja pozadine stranica.

--- a/Client/BrzoDoLokacije/app/src/main/res/drawable/button_sort.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/drawable/button_sort.xml
@@ -5,7 +5,7 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:strokeColor="#FF093A4C"
+        android:strokeColor="#737374"
         android:strokeWidth="1.5"
         android:strokeLineCap="round"
         android:strokeLineJoin="round"
