--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_show_posts.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_show_posts.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    android:background="#FFFCFCFC"
+    android:orientation="vertical"
     tools:context=".Fragments.FragmentShowPosts">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvSearch"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="10dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
-        android:elevation="0dp"
+        android:elevation="10dp"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,10 +27,11 @@
             android:id="@+id/etFragmentShowPostsSearch"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/rounded_white_button_login"
-            android:hint="  Pretraga"
-            android:paddingLeft="15dp"
-            android:inputType="textPersonName" />
+
+            android:backgroundTint="@color/white"
+            android:hint="Pretraga"
+            android:inputType="textPersonName"
+            android:paddingHorizontal="20dp" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/mbFragmentHomePageSearch"
@@ -54,7 +57,7 @@
             android:layout_height="50dp"
             android:layout_alignParentRight="true"
             android:layout_marginStart="16dp"
-            android:background="@color/white"
+            android:background="#FFFCFCFC"
             android:padding="@dimen/component_padding"
             android:scaleType="centerCrop"
             android:src="@drawable/button_filter"
@@ -66,7 +69,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:background="@color/white"
+
+            android:background="#FFFCFCFC"
             android:padding="@dimen/component_padding"
             android:scaleType="centerCrop"
             android:src="@drawable/button_sort"
@@ -74,17 +78,15 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-
         <ImageButton
             android:id="@+id/btnLinearLayout"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginEnd="16dp"
             android:layout_weight="1"
-            android:background="@color/white"
+            android:background="#FFFCFCFC"
             android:padding="@dimen/component_padding"
             android:scaleType="centerCrop"
-            android:src="@drawable/list_empty"
+            android:src="@drawable/ic_round_view_list_24"
             app:layout_constraintEnd_toStartOf="@+id/btnGridLayout"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/btnSortDirection"
@@ -95,29 +97,32 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="220dp"
+            android:layout_marginEnd="16dp"
             android:layout_weight="1"
-            android:background="@color/white"
+            android:background="#FFFCFCFC"
             android:clickable="true"
             android:padding="@dimen/component_padding"
             android:scaleType="centerCrop"
-            android:src="@drawable/grid_full"
+            android:src="@drawable/ic_round_grid_view_24"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btnSortDirection"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:id="@+id/swipeContainer">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvMain"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeContainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        android:layout_height="match_parent">
 
-    </androidx.recyclerview.widget.RecyclerView>
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvMain"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+        </androidx.recyclerview.widget.RecyclerView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
 </LinearLayout>
