--- a/Client/BrzoDoLokacije/app/src/main/res/layout/single_comment.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/single_comment.xml
@@ -19,6 +19,7 @@
             app:layout_constraintEnd_toStartOf="@+id/tvCommentText"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
+            android:clickable="true"
             android:scaleType="centerCrop"
             tools:layout_editor_absoluteY="27dp" />
         <androidx.appcompat.widget.LinearLayoutCompat
