--- a/Client/BrzoDoLokacije/app/src/main/res/layout/post_item_home_page.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/post_item_home_page.xml
@@ -21,6 +21,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/Circular" />
 
+    <ImageView
+        android:id="@+id/ivMultipleImagesIcon"
+        android:layout_width="18dp"
+        android:layout_height="17dp"
+        android:elevation="10dp"
+        android:visibility="invisible"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:src="@drawable/ic_baseline_multiple_images_24"
+        app:layout_constraintEnd_toEndOf="@+id/ivPIHPBackground"
+        app:layout_constraintTop_toTopOf="@+id/imageView9" />
+
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/ivPIHPBackground"
         android:layout_width="172dp"
