--- a/Client/BrzoDoLokacije/app/src/main/res/layout/post_item_home_page.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/post_item_home_page.xml
@@ -8,7 +8,7 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageView9"
         android:layout_width="170dp"
-        android:layout_height="240dp"
+        android:layout_height="215dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
@@ -35,8 +35,8 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/ivPIHPBackground"
-        android:layout_width="172dp"
-        android:layout_height="185dp"
+        android:layout_width="170dp"
+        android:layout_height="175dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
         android:elevation="3dp"
@@ -53,11 +53,11 @@
         android:id="@+id/tvPIHPLocationName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="2dp"
         android:elevation="3dp"
         android:text="TextView"
-        android:textSize="14sp"
+        android:textSize="13sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivPIHPBackground" />
@@ -66,9 +66,10 @@
         android:id="@+id/tvPIHPRecension"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="3dp"
 
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="4dp"
+        android:drawableLeft="star"
         android:elevation="3dp"
         android:text="TextView"
         android:textSize="11dp"
@@ -81,7 +82,7 @@
 
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="3dp"
         android:elevation="3dp"
         app:layout_constraintEnd_toStartOf="@+id/tvPIHPRecension"
         app:layout_constraintTop_toBottomOf="@+id/ivPIHPBackground"
@@ -90,9 +91,9 @@
     <ImageView
         android:id="@+id/imageView11"
 
-        android:layout_width="20dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="12dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="2dp"
         android:elevation="3dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -104,8 +105,7 @@
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="2dp"
         android:elevation="3dp"
         android:text="TextView"
         android:textSize="11dp"
