--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_capture_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_capture_post.xml
@@ -22,6 +22,49 @@
             tools:srcCompat="@tools:sample/avatars" />
 
         <Button
+            android:id="@+id/nextImage"
+            android:layout_width="78dp"
+            android:layout_height="0dp"
+            android:background="@drawable/rounded_transparent_button"
+            android:gravity="right"
+            android:padding="30dp"
+            app:icon="@drawable/ic_baseline_arrow_forward"
+            app:iconTint="#072242"
+            app:layout_constraintBottom_toTopOf="@+id/btnActivityCapturePostCapture"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+        <Button
+            android:id="@+id/previousImage"
+            android:layout_width="70dp"
+            android:layout_height="0dp"
+            android:background="@drawable/rounded_transparent_button"
+            android:gravity="left"
+            android:padding="30dp"
+            app:icon="@drawable/ic_baseline_arrow_back"
+            app:iconTint="#0E283C"
+            app:layout_constraintBottom_toTopOf="@+id/btnActivityCapturePostCapture"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="SpeakableTextPresentCheck" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnActivityCapturePostCaptureVisible1"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:stateListAnimator="@null"
+            android:layout_margin="5dp"
+            android:elevation="10dp"
+            app:backgroundTint="#00FFFFFF"
+            app:icon="@drawable/ic_baseline_add_a_photo_24"
+            app:iconGravity="textEnd"
+            app:iconSize="40dp"
+            app:iconTint="#1C7696"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="invisible"/>
+
+        <Button
             android:id="@+id/btnActivityCapturePostCapture"
             android:layout_width="68dp"
             android:layout_height="15dp"
