--- a/Client/BrzoDoLokacije/app/src/main/res/layout/post_item_home_page.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/post_item_home_page.xml
@@ -8,7 +8,7 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageView9"
         android:layout_width="170dp"
-        android:layout_height="215dp"
+        android:layout_height="210dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
@@ -23,20 +23,20 @@
 
     <ImageView
         android:id="@+id/ivMultipleImagesIcon"
-        android:layout_width="18dp"
-        android:layout_height="17dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:elevation="10dp"
-        android:visibility="invisible"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
         android:src="@drawable/ic_baseline_multiple_images_24"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/ivPIHPBackground"
         app:layout_constraintTop_toTopOf="@+id/imageView9" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/ivPIHPBackground"
         android:layout_width="170dp"
-        android:layout_height="175dp"
+        android:layout_height="170dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
         android:elevation="3dp"
