--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_add_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_add_post.xml
@@ -14,7 +14,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostUploadFromGallery"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <Button
         android:id="@+id/nextImage"
@@ -53,7 +53,7 @@
         android:text="Otvori galeriju"
         android:visibility="invisible"
         app:cornerRadius="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostAddLocation"
+        app:layout_constraintBottom_toTopOf="@+id/llTags"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
@@ -68,7 +68,7 @@
         android:drawableLeft="@drawable/ic_baseline_location_on_24"
         android:text="Dodaj lokaciju"
         android:textColor="#757471"
-        app:layout_constraintBottom_toTopOf="@+id/tvActivityAddPostDescriptiontext"
+        app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostAddTag"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.074"
         app:layout_constraintStart_toStartOf="parent" />
@@ -109,7 +109,8 @@
         android:maxLines="100"
         android:minHeight="50dp"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/llTags"
+        android:inputType="textCapSentences|textMultiLine"
+        app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostPost"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -148,7 +149,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostAddTag"
+        app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostAddLocation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"></LinearLayout>
 
@@ -157,12 +158,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
-        android:hint="Planina,Reka,Park..."
+        android:hint="Planina, Reka, Park..."
+        android:inputType="text"
         android:maxLength="12"
         android:minHeight="48dp"
+        android:singleLine="true"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostPost"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/btnActivityAddPostAddTag"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnActivityAddPostAddTag" />
 
     <Button
         android:id="@+id/btnActivityAddPostAddTag"
@@ -175,7 +179,7 @@
 
         android:text="Dodaj tag"
         android:textColor="#757471"
-        app:layout_constraintBottom_toTopOf="@+id/acTags"
+        app:layout_constraintBottom_toTopOf="@+id/tvActivityAddPostDescriptiontext"
         app:layout_constraintStart_toStartOf="parent" />
 
 
