--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_login.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_login.xml
@@ -54,6 +54,7 @@
             android:layout_marginTop="0dp"
             android:ems="10"
             android:hint="*********"
+            android:nextFocusDown="@+id/btnFragmentLoginLogin"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
