--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_user_profile.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_user_profile.xml
@@ -216,7 +216,7 @@
                             android:gravity="center"
                             android:padding="0dp"
                             android:stateListAnimator="@null"
-                            android:text="PRAĆENJA"
+                            android:text="PRATI"
                             android:textColor="#757471"
                             tools:ignore="TouchTargetSizeCheck" />
                     </LinearLayout>
@@ -240,6 +240,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:clickable="true"
                             android:layout_width="110dp"
                             android:layout_height="wrap_content"
                             android:id="@+id/tvActivityUserProfileFollowersNo"
@@ -249,6 +250,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:clickable="true"
                             android:id="@+id/tvActivityUserProfileFollowNo"
                             android:layout_width="110dp"
                             android:layout_height="wrap_content"
