--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_profile.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_profile.xml
@@ -201,7 +201,7 @@
                             android:gravity="center"
                             android:textSize="15sp"
                             android:textColor="#757471"
-                            android:text="PRAĆENJA" />
+                            android:text="PRATI" />
                     </LinearLayout>
                 </TableRow>
 
@@ -214,6 +214,7 @@
                     <LinearLayout>
 
                         <TextView
+
                             android:id="@+id/tvFragmentProfilePostsNo"
                             android:layout_width="110dp"
                             android:layout_height="wrap_content"
@@ -224,6 +225,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:clickable="true"
                             android:id="@+id/tvFragmentProfileFollowersNo"
                             android:layout_width="110dp"
                             android:layout_height="wrap_content"
@@ -234,6 +236,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:clickable="true"
                             android:id="@+id/tvFragmentProfileFollowNo"
                             android:layout_width="110dp"
                             android:layout_height="wrap_content"
