--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_browse.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_browse.xml
@@ -18,17 +18,18 @@
          />
 
 
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/FragmentBrowseMyLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:backgroundTint="#FFFFFF"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="80dp"
+        android:backgroundTint="#FFFFFF"
         android:clickable="true"
         android:focusable="true"
         android:tint="#FFFFFF"
+        android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/FragmentBrowseMapView"
         app:layout_constraintEnd_toEndOf="parent"
         app:rippleColor="#FFFFFF"
@@ -52,7 +53,7 @@
             android:id="@+id/FragmentBrowseSearchBar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/rounded_white_button_login"
+            android:backgroundTint="@color/white"
             android:hint="  Pretraga"
             android:inputType="textPersonName"
             android:paddingLeft="15dp" />
