Izmena stranica home page, single post, home page item,

--- a/Client/BrzoDoLokacije/app/src/main/res/layout/bottom_sheet_add_new_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/bottom_sheet_add_new_post.xml
@@ -5,7 +5,8 @@
     android:id="@+id/bottomSheetAddNewForNav"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/view_top_corner_radius">
 
 
     <TextView
