--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_opened_images.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_opened_images.xml
@@ -14,21 +14,24 @@
         app:layout_constraintStart_toStartOf="parent"
         android:background="@color/unfollow_transparent"
         android:id="@+id/clImageHeader">
-        <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:background="@null"
-            android:src="@drawable/ic_baseline_arrow_back"
-            android:id="@+id/btnBackToPost"/>
 
         <ImageButton
+            android:id="@+id/btnBackToPost"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:layout_constraintEnd_toEndOf="parent"
             android:background="@null"
             android:src="@drawable/ic_baseline_arrow_back"
-            android:id="@+id/btnDownload"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/btnDownload"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@null"
+            android:src="@drawable/ic_baseline_download_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
