--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_single_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_single_post.xml
@@ -5,6 +5,7 @@
     tools:context=".Activities.ActivitySinglePost"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:elevation="10dp"
     android:id="@+id/PostSwipeRefresh">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -28,13 +29,13 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
-            android:textSize="15dp"
-            android:layout_height="330dp"
+            android:layout_height="match_parent"
             android:background="@drawable/view_top_corner_radius"
             android:elevation="30dp"
             android:paddingHorizontal="16dp"
             android:paddingTop="16dp"
             android:paddingBottom="0dp"
+            android:textSize="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -68,8 +69,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="top|start"
                 android:padding="@dimen/text_padding"
-                android:textSize="15dp"
                 android:text="Drzava, grad"
+                android:textSize="15dp"
                 app:layout_constraintStart_toEndOf="@+id/imageView12"
                 app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
@@ -93,9 +94,9 @@
                 android:gravity="top|start"
                 android:padding="@dimen/text_padding"
                 android:text="User"
+                android:textColor="#FF03DAC5"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                android:textColor="#FF03DAC5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvLocationType" />
 
@@ -123,8 +124,8 @@
                 android:id="@+id/ivFavourite"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:clickable="true"
                 android:layout_marginRight="5dp"
+                android:clickable="true"
                 android:src="@drawable/ic_baseline_favorite_border_24"
                 app:layout_constraintBottom_toBottomOf="@+id/tvRating"
                 app:layout_constraintEnd_toStartOf="@+id/tvRating"
@@ -132,13 +133,13 @@
 
             <TextView
                 android:id="@+id/tvRating"
-                android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="4dp"
                 android:padding="@dimen/text_padding"
                 android:text="4.2"
+                android:textSize="15dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/tvNumberOfRatings"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -149,8 +150,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:padding="@dimen/text_padding"
-                android:textSize="15dp"
                 android:text="(10,500)"
+                android:textSize="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -178,8 +179,11 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/MapDialogueMapView"
+                android:elevation="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
+
+                android:layout_marginHorizontal="3dp"
                 android:layout_marginTop="8dp"
                 app:cardCornerRadius="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
