--- a/Client/BrzoDoLokacije/app/src/main/res/layout/post_item_home_page.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/post_item_home_page.xml
@@ -7,8 +7,8 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageView9"
-        android:layout_width="170dp"
-        android:layout_height="210dp"
+        android:layout_width="165dp"
+        android:layout_height="223dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
@@ -17,8 +17,10 @@
         android:src="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         app:shapeAppearanceOverlay="@style/Circular" />
 
     <ImageView
@@ -35,8 +37,8 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/ivPIHPBackground"
-        android:layout_width="170dp"
-        android:layout_height="170dp"
+        android:layout_width="165dp"
+        android:layout_height="185dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
         android:elevation="3dp"
@@ -54,37 +56,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
         android:elevation="3dp"
         android:text="TextView"
         android:textSize="13sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivPIHPBackground" />
+        app:layout_constraintBottom_toTopOf="@+id/tvPIHPLocationDetail"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tvPIHPRecension"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
 
         android:layout_marginEnd="4dp"
+        android:layout_marginBottom="18dp"
         android:elevation="3dp"
         android:text="TextView"
         android:textSize="11dp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageView9"
-        app:layout_constraintTop_toBottomOf="@+id/ivPIHPBackground" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
+        app:layout_constraintEnd_toEndOf="@+id/imageView9" />
 
     <ImageView
         android:id="@+id/imageView10"
 
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginBottom="18dp"
         android:elevation="3dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
         app:layout_constraintEnd_toStartOf="@+id/tvPIHPRecension"
-        app:layout_constraintTop_toBottomOf="@+id/ivPIHPBackground"
         app:srcCompat="@drawable/ic_baseline_star_rate_24" />
 
     <ImageView
@@ -93,10 +95,10 @@
         android:layout_width="18dp"
         android:layout_height="18dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginBottom="3dp"
         android:elevation="3dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvPIHPLocationName"
         app:srcCompat="@drawable/ic_baseline_location_on_24" />
 
     <TextView
@@ -104,14 +106,14 @@
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
+        android:layout_marginBottom="3dp"
         android:elevation="3dp"
         android:text="TextView"
         android:textSize="11dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
         app:layout_constraintEnd_toEndOf="@+id/imageView9"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView11"
-        app:layout_constraintTop_toBottomOf="@+id/tvPIHPLocationName" />
+        app:layout_constraintStart_toEndOf="@+id/imageView11" />
     " />
 
 
